--- a/YouTubeTranscriptSummarizer.ipynb
+++ b/YouTubeTranscriptSummarizer.ipynb
@@ -5,7 +5,7 @@
    "id": "47671885",
    "metadata": {},
    "source": [
-    "## Overview ![title](spirit-island-transparent-small.png)\n",
+    "## Overview ![](spirit-island-transparent-small.png)\n",
     "\n",
     "This short exercise is to gain basic competency with abstractive summarization from pre-trained NLP models using CUDA. We retrieve the transcript of a Spirit Island review video from the YouTube channel 3 Minute Board Games, which can be found here: https://www.youtube.com/watch?v=aEpGN6jswPw.\n",
     "\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "e7c709f3-e8fd-43b1-b192-bad6896034fd",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "da0e2257-762f-453f-a7ca-9845d233ff84",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "e0966489",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        " {'text': 'I recommend mage Knight', 'start': 178.7, 'duration': 1.64}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "29e7fe15-89d9-4118-907f-61177b6c43bf",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "1efc59db-d307-49d8-813c-2812f6dc080f",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "be7ef6a4-7fdd-4cf1-a3fc-7f1f096ea353",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "7be76c34-d02e-4d97-a65e-9754f05f8cae",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "755403c6-d60a-4758-b7e9-2156201078a1",
    "metadata": {},
    "outputs": [
@@ -287,14 +287,12 @@
     "\n",
     "Below is the CUDA implementation. To assess whether CUDA is actually being used, we view the performance tab of the task manager. Below is a screenshot immediately after using Run All on this notebook.\n",
     "\n",
-    "<div>\n",
-    "<img src=\"cuda-graph.png\" width=\"500\"/>\n",
-    "</div>"
+    "![](cuda-graph.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "52e96afe",
    "metadata": {},
    "outputs": [
@@ -304,7 +302,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "a4aa9778-8d3a-4348-8f76-c346204c0898",
    "metadata": {},
    "outputs": [],
@@ -333,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "219bba43-8000-4442-95d7-be544feb5c69",
    "metadata": {},
    "outputs": [],
@@ -343,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "ce6b0c32-8952-46c3-be39-0b1fdf7be9eb",
    "metadata": {},
    "outputs": [
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "c6cb83f9-a343-441f-8042-3796d0e9c202",
    "metadata": {},
    "outputs": [],
@@ -372,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "70d452fa-99ab-4f39-845c-f5956deb06ae",
    "metadata": {},
    "outputs": [],
@@ -382,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "2400eeef-b054-4eb9-981c-6145870e32ae",
    "metadata": {},
    "outputs": [],
@@ -392,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "ca4a37fa-916c-4c8e-b306-60761ca7a171",
    "metadata": {},
    "outputs": [],
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "4b246401-49d5-4698-926a-7613ff347654",
    "metadata": {},
    "outputs": [
@@ -428,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "d51dc912-a677-4171-acd0-1df59de052a9",
    "metadata": {},
    "outputs": [],
@@ -439,17 +437,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "f89a0497-1889-4b4e-8373-10e106a0a436",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\19368\\anaconda3\\envs\\mandalore\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "913c94f5-0a04-4d8e-a6c6-2f121f948534",
    "metadata": {},
    "outputs": [],
@@ -459,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "10613ecd-b1fc-4578-939d-7f62b7912681",
    "metadata": {},
    "outputs": [
@@ -485,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "503d4fe1-5852-423d-8a1a-32a094c55280",
    "metadata": {},
    "outputs": [],
@@ -495,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "f48ae05b-d551-49ce-9e7a-a5c906ccd495",
    "metadata": {},
    "outputs": [
@@ -503,6 +510,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     }
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "3c037aa4-8f71-4ddf-84f5-d9d5cbf764e4",
    "metadata": {
     "scrolled": true
@@ -526,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "1d72a8ed-56d1-47a9-b41a-992cc756013f",
    "metadata": {},
    "outputs": [],
@@ -536,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "c132d8d4-2020-41eb-8402-2851ee19a2e9",
    "metadata": {},
    "outputs": [
@@ -562,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "e91206e3-3033-43a9-aff4-49e49e4cb602",
    "metadata": {},
    "outputs": [],
@@ -572,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "26d28904-2801-4e45-b180-a055b5a9d34a",
    "metadata": {},
    "outputs": [
